--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
   <title>{% block title %}{% endblock %}</title>
 </head>
 
+<body>
 <!-- Page jumbotron (Bootstrap 5). -->
 <div class="row mb-2">
   <div class="p-5 mb-4 bg-dark-subtle rounded-3">
